<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mysql Browser</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add new</string>
    <string name="action_remove">Remove</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_entries">EntriesActivity</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_element">ElementActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_fragment_database">Available Databases</string>

    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hint_url">URL ex: https://example.com/c.php</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="set">Set</string>
    <string name="back">Back</string>

    <string name="status">Status</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>

    <string name="login_error">Wrong login/password</string>

    <string name="general_category">General</string>
    <string name="entries_limit">Entries per page limit</string>
    <string name="entries_summary">%s entries per page</string> <!-- <xliff:g id="count"></xliff:g> -->

    <string name="error_no_tables">No tables in this database</string>
    <string name="error_no_entries">No entries in this table</string>
    <string name="error_no_databases">No available databases</string>
    <string name="error_no_save">Your data will <b>NOT</b> be saved! Would you like to continue?</string>
    <string name="error_remove">This entry will be removed from database. This action <b>CAN NOT</b> be reversed! Would you like to continue?</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_connection_reset">Connection reset by peer</string>
    <string name="error_connection_refused">Connection refused</string>
    <string name="error_connection_unreachable">No route to host</string>

    <string name="pref_entries_per_page">Set number of entries per page</string>
    <string name="login_settings">Login credentials</string>
    <string name="save_credentials">Save credentials</string>
    <string name="connector_url">Connector URL</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="sql_query">SQL Query</string>
    <string name="title_activity_sql">SQL Query</string>
    <string name="hint_sql_query">SQL Query</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_execute">Execute</string>
    <string name="info">Information</string>

</resources>
