<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general_category">
        <Preference
            android:key="entries_limit"
            android:title="@string/entries_limit"
            android:summary="@string/entries_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/login_settings">

        <CheckBoxPreference
            android:key="save_credentials_enabled"
            android:title="@string/save_credentials"/>

        <EditTextPreference
            android:key="url"
            android:title="@string/connector_url"
            android:inputType="textUri"
            android:dependency="save_credentials_enabled"/>

        <EditTextPreference
            android:key="login"
            android:title="@string/username"
            android:dependency="save_credentials_enabled"/>

        <EditTextPreference
            android:key="password"
            android:title="@string/password"
            android:password="true"
            android:dependency="save_credentials_enabled"/>
    </PreferenceCategory>

</PreferenceScreen>