<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.nerull7.mysqlbrowser.LoginFragment">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false"
        android:layout_marginTop="-7dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editURL"
            android:hint="@string/hint_url"
            android:inputType="textUri"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editLogin"
            android:hint="@string/username"
            android:lines="1"
            android:inputType="text"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassowrd"
            android:hint="@string/password"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
